--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "\"\"\"get global config\"\"\"\n",
-    "r_get = requests.get(url=f'{BASE_URL}/gconfig', cookies=cookies)\n",
+    "r_get = requests.get(url=f'{BASE_URL}/gconfigs', cookies=cookies)\n",
     "print(r_get.json())"
    ]
   },
@@ -135,9 +135,10 @@
    "outputs": [],
    "source": [
     "\"\"\"update global config\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/gconfig',\n",
+    "r_put = requests.put(url=f'{BASE_URL}/gconfigs',\n",
     "                     cookies=cookies,\n",
-    "                     json={'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}, 'telegram': None, 'facebook': None}, 'endpoints': {'action_endpoint': {'url': 'http://rasa-action:5055/webhook'}}})\n",
+    "                     json={'docker': {'rasa_container': 'app', 'action_container': 'action', 'asar_api_url': 'http://api:5500', 'rasa_api_url': 'http://app:5005'}, 'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}, 'telegram': None, 'facebook': None}, 'endpoints': {'action_endpoint': {'url': 'http://localhost:5055/webhook'}}}\n",
+    ")\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1519,6 +1520,25 @@
     "pprint.pprint(domain, sort_dicts=False)\n",
     "print('------------------------------------------------------------------------------------------------------------')\n",
     "yaml.dump(domain, sys.stdout)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import docker\n",
+    "client = docker.from_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.containers.get('asar-app-1')"
    ]
   }
  ],
