--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -137,8 +137,8 @@
     "\"\"\"update global config\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/gconfigs',\n",
     "                     cookies=cookies,\n",
-    "                     json={'docker': {'rasa_container': 'app', 'action_container': 'action', 'asar_api_url': 'http://api:5500', 'rasa_api_url': 'http://app:5005'}, 'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}, 'telegram': None, 'facebook': None}, 'endpoints': {'action_endpoint': {'url': 'http://localhost:5055/webhook'}}}\n",
-    ")\n",
+    "                     json={'docker': {'rasa_container': 'app', 'action_container': 'action', 'asar_api_url': 'http://api:5500', 'rasa_api_url': 'http://app:5005'}, 'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}}, 'endpoints': {'action_endpoint': {'url': 'http://localhost:5055/webhook'}}}\n",
+    "                    )\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1538,7 +1538,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.containers.get('asar-app-1')"
+    "c = client.containers.get('app')\n",
+    "c.restart()"
    ]
   }
  ],
