--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -137,7 +137,7 @@
     "\"\"\"update global config\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/gconfigs',\n",
     "                     cookies=cookies,\n",
-    "                     json={'docker': {'rasa_container': 'app', 'action_container': 'action', 'asar_api_url': 'http://api:5500', 'rasa_api_url': 'http://app:5005'}, 'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}}, 'endpoints': {'action_endpoint': {'url': 'http://localhost:5055/webhook'}}}\n",
+    "                     json={'docker': {'rasa_container': 'app', 'action_container': 'action', 'asar_api_url': 'http://api:5500', 'rasa_api_url': 'http://app:5005'}}\n",
     "                    )\n",
     "print(r_put.json())\n"
    ]
@@ -1290,7 +1290,7 @@
    "outputs": [],
    "source": [
     "\"\"\"Load a model\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/models',\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/models',\n",
     "                       cookies=cookies,\n",
     "                       json={},\n",
     "                       timeout=None)\n",
