--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -105,6 +105,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"change password\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/auth',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'password': 'admin', 'new_password': 'admin'}\n",
+    "                    )\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"Logout\"\"\"\n",
     "r_del = requests.delete(url=f'{BASE_URL}/auth', cookies=cookies)\n",
     "print(r_del.json())\n"
