--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update intent\"\"\"\n",
+    "\"\"\"update an intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/intents/intent_1',\n",
     "                     cookies=cookies,\n",
     "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
@@ -358,6 +358,104 @@
     "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/intents/intent_1',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Response API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"create a response\"\"\"\n",
+    "r_post = requests.post(url=f'{BASE_URL}/projects/test_project/responses',\n",
+    "                       cookies=cookies,\n",
+    "                       json={'name': 'response_1'})\n",
+    "print(r_post.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get responses\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/responses',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/responses?mode=name',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get a response\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"update a response\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={\"content\": {'data': [{'text': 'string_1'}]}})\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"update & rename a response\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'response_2', \"content\": {'data': [{'text': 'string_1'}, {'text': 'string_2'}]}})\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"rename a response\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/responses/response_2',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'response_1'})\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"delete a response\"\"\"\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
+    "                           cookies=cookies)\n",
+    "print(r_delete.json())"
    ]
   },
   {
