--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -843,53 +843,9 @@
     "\"\"\"update a story\"\"\"\n",
     "content = {\n",
     "    \"content\": {\n",
-    "        \"nodes\": [\n",
-    "            {\n",
-    "                \"type\": \"default\",\n",
-    "                \"dimensions\": {\n",
-    "                    \"width\": 150,\n",
-    "                    \"height\": 36\n",
-    "                },\n",
-    "                \"handleBounds\": {\n",
-    "                    \"source\": [\n",
-    "                        {\n",
-    "                            \"id\": \"1__handle-bottom\",\n",
-    "                            \"position\": \"bottom\",\n",
-    "                            \"x\": 71,\n",
-    "                            \"y\": 31,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ],\n",
-    "                    \"target\": [\n",
-    "                        {\n",
-    "                            \"id\": \"1__handle-top\",\n",
-    "                            \"position\": \"top\",\n",
-    "                            \"x\": 71,\n",
-    "                            \"y\": -3,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ]\n",
-    "                },\n",
-    "                \"computedPosition\": {\n",
-    "                    \"x\": 100,\n",
-    "                    \"y\": 100,\n",
-    "                    \"z\": 0\n",
-    "                },\n",
-    "                \"id\": \"1\",\n",
-    "                \"label\": \"Node 1\",\n",
-    "                \"position\": {\n",
-    "                    \"x\": 100,\n",
-    "                    \"y\": 100\n",
-    "                }\n",
-    "            }\n",
-    "        ],\n",
+    "        \"nodes\": [],\n",
     "        \"edges\": [],\n",
-    "        \"position\": [\n",
-    "            0,\n",
-    "            0\n",
-    "        ],\n",
+    "        \"position\": [],\n",
     "        \"zoom\": 1\n",
     "    }\n",
     "}\n",
@@ -910,96 +866,10 @@
     "content = {\n",
     "    'new_name': 'story_2',\n",
     "    \"content\": {\n",
-    "        \"nodes\": [\n",
-    "            {\n",
-    "                \"type\": \"default\",\n",
-    "                \"dimensions\": {\n",
-    "                    \"width\": 150,\n",
-    "                    \"height\": 36\n",
-    "                },\n",
-    "                \"handleBounds\": {\n",
-    "                    \"source\": [\n",
-    "                        {\n",
-    "                            \"id\": \"1__handle-bottom\",\n",
-    "                            \"position\": \"bottom\",\n",
-    "                            \"x\": 71,\n",
-    "                            \"y\": 31,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ],\n",
-    "                    \"target\": [\n",
-    "                        {\n",
-    "                            \"id\": \"1__handle-top\",\n",
-    "                            \"position\": \"top\",\n",
-    "                            \"x\": 71,\n",
-    "                            \"y\": -3,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ]\n",
-    "                },\n",
-    "                \"computedPosition\": {\n",
-    "                    \"x\": 133,\n",
-    "                    \"y\": 119,\n",
-    "                    \"z\": 0\n",
-    "                },\n",
-    "                \"id\": \"1\",\n",
-    "                \"label\": \"Node 1\",\n",
-    "                \"position\": {\n",
-    "                    \"x\": 133,\n",
-    "                    \"y\": 119\n",
-    "                },\n",
-    "                \"selected\": False\n",
-    "            },\n",
-    "            {\n",
-    "                \"type\": \"default\",\n",
-    "                \"dimensions\": {\n",
-    "                    \"width\": 150,\n",
-    "                    \"height\": 36\n",
-    "                },\n",
-    "                \"handleBounds\": {\n",
-    "                    \"source\": [\n",
-    "                        {\n",
-    "                            \"id\": \"random_node-2__handle-bottom\",\n",
-    "                            \"position\": \"bottom\",\n",
-    "                            \"x\": 71.00000273177193,\n",
-    "                            \"y\": 31.000001345439145,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ],\n",
-    "                    \"target\": [\n",
-    "                        {\n",
-    "                            \"id\": \"random_node-2__handle-top\",\n",
-    "                            \"position\": \"top\",\n",
-    "                            \"x\": 71.00000273177193,\n",
-    "                            \"y\": -2.9999963998813097,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ]\n",
-    "                },\n",
-    "                \"computedPosition\": {\n",
-    "                    \"x\": 133.71891912823548,\n",
-    "                    \"y\": 177.44093732781238,\n",
-    "                    \"z\": 1000\n",
-    "                },\n",
-    "                \"id\": \"random_node-2\",\n",
-    "                \"label\": \"Node 2\",\n",
-    "                \"position\": {\n",
-    "                    \"x\": 133.71891912823548,\n",
-    "                    \"y\": 177.44093732781238\n",
-    "                },\n",
-    "                \"selected\": True\n",
-    "            }\n",
-    "        ],\n",
+    "        \"nodes\": [],\n",
     "        \"edges\": [],\n",
-    "        \"position\": [\n",
-    "            -126.92906289092366,\n",
-    "            -87.27995323994386\n",
-    "        ],\n",
-    "        \"zoom\": 1.319507910772895\n",
+    "        \"position\": [],\n",
+    "        \"zoom\": 2\n",
     "    }\n",
     "}\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/stories/story_1',\n",
@@ -1090,53 +960,9 @@
     "\"\"\"update a rule\"\"\"\n",
     "content = {\n",
     "    \"content\": {\n",
-    "        \"nodes\": [\n",
-    "          {\n",
-    "              \"type\": \"default\",\n",
-    "              \"dimensions\": {\n",
-    "                  \"width\": 150,\n",
-    "                  \"height\": 36\n",
-    "              },\n",
-    "              \"handleBounds\": {\n",
-    "                  \"source\": [\n",
-    "                      {\n",
-    "                          \"id\": \"1__handle-bottom\",\n",
-    "                          \"position\": \"bottom\",\n",
-    "                          \"x\": 71,\n",
-    "                          \"y\": 31,\n",
-    "                          \"width\": 8,\n",
-    "                          \"height\": 8\n",
-    "                      }\n",
-    "                  ],\n",
-    "                  \"target\": [\n",
-    "                      {\n",
-    "                          \"id\": \"1__handle-top\",\n",
-    "                          \"position\": \"top\",\n",
-    "                          \"x\": 71,\n",
-    "                          \"y\": -3,\n",
-    "                          \"width\": 8,\n",
-    "                          \"height\": 8\n",
-    "                      }\n",
-    "                  ]\n",
-    "              },\n",
-    "              \"computedPosition\": {\n",
-    "                  \"x\": 100,\n",
-    "                  \"y\": 100,\n",
-    "                  \"z\": 0\n",
-    "              },\n",
-    "              \"id\": \"1\",\n",
-    "              \"label\": \"Node 1\",\n",
-    "              \"position\": {\n",
-    "                  \"x\": 100,\n",
-    "                  \"y\": 100\n",
-    "              }\n",
-    "          }\n",
-    "        ],\n",
+    "        \"nodes\": [],\n",
     "        \"edges\": [],\n",
-    "        \"position\": [\n",
-    "            0,\n",
-    "            0\n",
-    "        ],\n",
+    "        \"position\": [],\n",
     "        \"zoom\": 1\n",
     "    }\n",
     "}\n",
@@ -1154,57 +980,12 @@
    "source": [
     "\"\"\"update & rename a rule\"\"\"\n",
     "content = {\n",
-    "    'new_name': 'rule_2',\n",
+    "    'new_name': 'story_2',\n",
     "    \"content\": {\n",
-    "        \"nodes\": [\n",
-    "            {\n",
-    "                \"type\": \"default\",\n",
-    "                \"dimensions\": {\n",
-    "                    \"width\": 150,\n",
-    "                    \"height\": 36\n",
-    "                },\n",
-    "                \"handleBounds\": {\n",
-    "                    \"source\": [\n",
-    "                        {\n",
-    "                            \"id\": \"1__handle-bottom\",\n",
-    "                            \"position\": \"bottom\",\n",
-    "                            \"x\": 71,\n",
-    "                            \"y\": 31,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ],\n",
-    "                    \"target\": [\n",
-    "                        {\n",
-    "                            \"id\": \"1__handle-top\",\n",
-    "                            \"position\": \"top\",\n",
-    "                            \"x\": 71,\n",
-    "                            \"y\": -3,\n",
-    "                            \"width\": 8,\n",
-    "                            \"height\": 8\n",
-    "                        }\n",
-    "                    ]\n",
-    "                },\n",
-    "                \"computedPosition\": {\n",
-    "                    \"x\": 133,\n",
-    "                    \"y\": 119,\n",
-    "                    \"z\": 0\n",
-    "                },\n",
-    "                \"id\": \"1\",\n",
-    "                \"label\": \"Node 1\",\n",
-    "                \"position\": {\n",
-    "                    \"x\": 133,\n",
-    "                    \"y\": 119\n",
-    "                },\n",
-    "                \"selected\": False\n",
-    "            }\n",
-    "        ],\n",
+    "        \"nodes\": [],\n",
     "        \"edges\": [],\n",
-    "        \"position\": [\n",
-    "            -126.92906289092366,\n",
-    "            -87.27995323994386\n",
-    "        ],\n",
-    "        \"zoom\": 1.319507910772895\n",
+    "        \"position\": [],\n",
+    "        \"zoom\": 2\n",
     "    }\n",
     "}\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/rules/rule_1',\n",
@@ -1457,188 +1238,6 @@
     "# if __name__ == \"__main__\":\n",
     "#     response = requests.post(url, data = json.dumps(data))\n",
     "#     print(response.text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# compile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intents = {\n",
-    "    \"tsmc\": {\n",
-    "        \"examples\": [\n",
-    "            {\n",
-    "                \"text\": \"台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名\",\n",
-    "                \"labels\": [\n",
-    "                    {\n",
-    "                        \"token\": \"美國\",\n",
-    "                        \"start\": 4,\n",
-    "                        \"end\": 6,\n",
-    "                        \"entity\": \"country\"\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"token\": \"台積電\",\n",
-    "                        \"start\": 0,\n",
-    "                        \"end\": 3,\n",
-    "                        \"entity\": \"company\"\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"token\": \"251\",\n",
-    "                        \"start\": 41,\n",
-    "                        \"end\": 44,\n",
-    "                        \"entity\": \"rank\"\n",
-    "                    }\n",
-    "                ]\n",
-    "            },\n",
-    "            {\n",
-    "                \"text\": \"台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名\",\n",
-    "                \"labels\": [\n",
-    "                    {\n",
-    "                        \"token\": \"美國\",\n",
-    "                        \"start\": 4,\n",
-    "                        \"end\": 6,\n",
-    "                        \"entity\": \"country\"\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"token\": \"台積電\",\n",
-    "                        \"start\": 0,\n",
-    "                        \"end\": 3,\n",
-    "                        \"entity\": \"company\"\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"token\": \"251\",\n",
-    "                        \"start\": 41,\n",
-    "                        \"end\": 44,\n",
-    "                        \"entity\": \"rank\"\n",
-    "                    }\n",
-    "                ]\n",
-    "            }\n",
-    "        ]\n",
-    "    },\n",
-    "    \"tsmc2\": {\n",
-    "        \"examples\": [\n",
-    "            {\n",
-    "                \"text\": \"台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名\",\n",
-    "                \"labels\": [\n",
-    "                    {\n",
-    "                        \"token\": \"美國\",\n",
-    "                        \"start\": 4,\n",
-    "                        \"end\": 6,\n",
-    "                        \"entity\": \"country\"\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"token\": \"台積電\",\n",
-    "                        \"start\": 0,\n",
-    "                        \"end\": 3,\n",
-    "                        \"entity\": \"company\"\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"token\": \"251\",\n",
-    "                        \"start\": 41,\n",
-    "                        \"end\": 44,\n",
-    "                        \"entity\": \"rank\"\n",
-    "                    }\n",
-    "                ]\n",
-    "            }\n",
-    "        ],\n",
-    "        'use_entities': ['entity_1', 'entity_2']\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "entities = {\n",
-    "    \"test\": {\n",
-    "        \"roles\": [\n",
-    "            \"role_1\",\n",
-    "            \"role_2\"\n",
-    "        ]\n",
-    "    },\n",
-    "    \"company\": {\n",
-    "        \"roles\": [\n",
-    "            \"role_1\",\n",
-    "            \"role_2\"\n",
-    "        ],\n",
-    "        \"groups\": [\n",
-    "            \"group_1\",\n",
-    "            \"group_2\"\n",
-    "        ]},\n",
-    "    \"rank\": {\n",
-    "        \"groups\": [\n",
-    "            \"group_1\",\n",
-    "            \"group_2\"\n",
-    "        ]\n",
-    "    },\n",
-    "    \"country\": {}\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from ruamel.yaml import YAML\n",
-    "import pprint\n",
-    "from ruamel.yaml.scalarstring import LiteralScalarString\n",
-    "\n",
-    "nlu = {'nlu': []}\n",
-    "domain = {'intents': [], 'entities': []}\n",
-    "yaml=YAML()\n",
-    "\n",
-    "# compile intents\n",
-    "for intent_name, intent in intents.items():\n",
-    "    # nlu\n",
-    "    examples_arr = []\n",
-    "    for example in intent['examples']:\n",
-    "        text = ''\n",
-    "        previous_end = 0\n",
-    "        sorted_labels = sorted(example['labels'], key=lambda d: d['start'])\n",
-    "        for label in sorted_labels:\n",
-    "            token = label.get('token')\n",
-    "            entity = label.get('entity')\n",
-    "            role = label.get('role')\n",
-    "            group = label.get('group')\n",
-    "            text += example['text'][previous_end:label['start']]\n",
-    "            text += f'[{token}]{{\"entity\": \"{entity}\"'\n",
-    "            text += f', \"role\": \"{role}\"' if role else ''\n",
-    "            text += f', \"group\": \"{group}\"' if group else ''\n",
-    "            text += f'}}'\n",
-    "            previous_end = label['end']\n",
-    "        text += example['text'][previous_end:]\n",
-    "        text += '\\n'\n",
-    "        examples_arr.append({'text': LiteralScalarString(text)})\n",
-    "    nlu['nlu'].append({'intent': intent_name, 'examples': examples_arr})\n",
-    "\n",
-    "    # domain\n",
-    "    intent.pop('examples')\n",
-    "    if intent:\n",
-    "        domain['intents'].append({intent_name: intent})\n",
-    "    else:\n",
-    "        domain['intents'].append(intent_name)\n",
-    "\n",
-    "# compile entities\n",
-    "for entity_name, entity in entities.items():\n",
-    "    if entity:\n",
-    "        domain['entities'].append({entity_name: entity})\n",
-    "    else:\n",
-    "        domain['entities'].append(entity_name)\n",
-    "\n",
-    "pprint.pprint(nlu, sort_dicts=False)\n",
-    "print('------------------------------------------------------------------------------------------------------------')\n",
-    "yaml.dump(nlu, sys.stdout)\n",
-    "print('------------------------------------------------------------------------------------------------------------')\n",
-    "pprint.pprint(domain, sort_dicts=False)\n",
-    "print('------------------------------------------------------------------------------------------------------------')\n",
-    "yaml.dump(domain, sys.stdout)\n"
    ]
   }
  ],
