--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1239,6 +1239,32 @@
     "#     response = requests.post(url, data = json.dumps(data))\n",
     "#     print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Train a model\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/models',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Load a model\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/models',\n",
+    "                       cookies=cookies,\n",
+    "                       json={},\n",
+    "                       timeout=None)\n",
+    "print(r_put.json())"
+   ]
   }
  ],
  "metadata": {
