--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -576,6 +576,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Synonym API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"create an synonym\"\"\"\n",
+    "r_post = requests.post(url=f'{BASE_URL}/projects/test_project/synonyms',\n",
+    "                       cookies=cookies,\n",
+    "                       json={'name': 'synonym_1'})\n",
+    "print(r_post.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get synonyms\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/synonyms',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/synonyms?mode=name',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get a synonym\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"update a synonym\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={\"content\": {'examples': ['synonym_11']}})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"update & rename a synonym\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'synonym_2', \"content\": {'examples': ['synonym_111']}})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"rename a synonym\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_2',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'synonym_1'})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"delete a synonym\"\"\"\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
+    "                           cookies=cookies)\n",
+    "print(r_delete.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Entity API"
    ]
   },
@@ -664,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"delete an intent\"\"\"\n",
+    "\"\"\"delete an entity\"\"\"\n",
     "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/entities/entity_1',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
