--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1262,24 +1262,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# response = requests.get(url=f'http://localhost:5005/status')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# response = requests.delete(url=f'http://localhost:5005/model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"Load a model\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/models',\n",
     "                       cookies=cookies,\n",
@@ -1362,6 +1344,24 @@
     "                       json={},\n",
     "                       timeout=None)\n",
     "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(url=f'http://rasa.lisontech.net/status')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.delete(url=f'http://rasa.lisontech.net/model')"
    ]
   }
  ],
