--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1250,10 +1250,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Train a model\"\"\"\n",
-    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/models',\n",
-    "                     cookies=cookies)\n",
-    "print(r_get.text)"
+    "\"\"\"Get Get training info\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/models', cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Train a mode\"\"\"\n",
+    "r_post = requests.post(url=f'{BASE_URL}/models',\n",
+    "                       cookies=cookies,\n",
+    "                       json={'project_name': 'test_project'})\n",
+    "print(r_post.json())"
    ]
   },
   {
@@ -1263,9 +1275,9 @@
    "outputs": [],
    "source": [
     "\"\"\"Load a model\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/models',\n",
+    "r_put = requests.put(url=f'{BASE_URL}/models',\n",
     "                       cookies=cookies,\n",
-    "                       json={},\n",
+    "                       json={'project_name': 'test_project'},\n",
     "                       timeout=None)\n",
     "print(r_put.json())"
    ]
@@ -1326,10 +1338,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Train a model\"\"\"\n",
-    "r_get = requests.get(url=f'{BASE_URL}/projects/rasa_bot/models',\n",
-    "                     cookies=cookies)\n",
-    "print(r_get.text)"
+    "\"\"\"Train a mode\"\"\"\n",
+    "r_post = requests.post(url=f'{BASE_URL}/models',\n",
+    "                       cookies=cookies,\n",
+    "                       json={'project_name': 'rasa_bot'})\n",
+    "print(r_post.json())"
    ]
   },
   {
@@ -1339,9 +1352,9 @@
    "outputs": [],
    "source": [
     "\"\"\"Load a model\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/rasa_bot/models',\n",
+    "r_put = requests.put(url=f'{BASE_URL}/models',\n",
     "                       cookies=cookies,\n",
-    "                       json={},\n",
+    "                       json={'project_name': 'rasa_bot'},\n",
     "                       timeout=None)\n",
     "print(r_put.json())"
    ]
@@ -1352,7 +1365,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(url=f'http://rasa.lisontech.net/status')"
+    "response = requests.get(url=f'http://rasa.lisontech.net/status')\n",
+    "response.json()"
    ]
   },
   {
