--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1250,7 +1250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Get Get training info\"\"\"\n",
+    "\"\"\"Get training info\"\"\"\n",
     "r_get = requests.get(url=f'{BASE_URL}/models', cookies=cookies)\n",
     "print(r_get.json())"
    ]
