Fix model loader timeout error

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1253,8 +1253,7 @@
     "\"\"\"Load a model\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/models',\n",
     "                       cookies=cookies,\n",
-    "                       json={'project_name': 'test_project'},\n",
-    "                       timeout=None)\n",
+    "                       json={'project_name': 'test_project'})\n",
     "print(r_put.json())"
    ]
   },
@@ -1330,8 +1329,7 @@
     "\"\"\"Load a model\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/models',\n",
     "                       cookies=cookies,\n",
-    "                       json={'project_name': 'rasa_bot'},\n",
-    "                       timeout=None)\n",
+    "                       json={'project_name': 'rasa_bot'})\n",
     "print(r_put.json())"
    ]
   },
@@ -1341,8 +1339,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(url=f'http://rasa.lisontech.net/status')\n",
-    "response.json()"
+    "resp = requests.put(url=f'http://127.0.0.1:5005/model',\n",
+    "                    json={'model_file': '/data/asar_projects/rasa_bot/output/rasa_bot.tar.gz'})\n",
+    "resp.status_code\n"
    ]
   },
   {
@@ -1351,7 +1350,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.delete(url=f'http://rasa.lisontech.net/model')"
+    "resp = requests.get(url=f'http://rasa.lisontech.net/status')\n",
+    "resp.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = requests.delete(url=f'http://rasa.lisontech.net/model')"
    ]
   }
  ],
