--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1313,6 +1313,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Get training info\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/models', cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"Train a mode\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/models',\n",
     "                       cookies=cookies,\n",
@@ -1339,6 +1350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Load a model(localhost)\"\"\"\n",
     "resp = requests.put(url=f'http://127.0.0.1:5005/model',\n",
     "                    json={'model_file': '/data/asar_projects/rasa_bot/output/rasa_bot.tar.gz'})\n",
     "resp.status_code\n"
